[gd_scene load_steps=5 format=3 uid="uid://cb2ncsvxgjcka"]

[ext_resource type="Script" path="res://Manager/spawner/fire_ball_spawner.gd" id="1_ldisc"]
[ext_resource type="Script" path="res://Resources/CodeSimplefier/SimplefySettingMath.gd" id="2_aepr1"]

[sub_resource type="Resource" id="Resource_ad5ll"]
resource_local_to_scene = true
script = ExtResource("2_aepr1")
min_value = 3
max_value = 5

[sub_resource type="Resource" id="Resource_ryyeu"]
resource_local_to_scene = true
script = ExtResource("2_aepr1")
min_value = 5
max_value = 10

[node name="FireBallSpawner" type="Node"]
script = ExtResource("1_ldisc")
fire_per_round = SubResource("Resource_ad5ll")
time_until_wave_start = SubResource("Resource_ryyeu")

[node name="fire_time" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="wave_time" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="fire_time" to="." method="_on_fire_time_timeout"]
[connection signal="timeout" from="wave_time" to="." method="_on_wave_time_timeout"]
